------------------------------------------------------------------------------
CUG 2.0 (tag: CUG_2_0) - 2002-09-19

2002-09-19 16:39  ljulliar

	* user_guide/xml/en_US/ProjectAdministration.xml: Word 'Chapter'
	unnecessary. Already generated by the xref.

2002-09-19 16:38  ljulliar

	* user_guide/xml/en_US/OtherServices.xml: extra space removed from
	xref linkend

2002-09-19 15:56  ljulliar

	* user_guide/xml/en_US/: BookInfo.xml, BugTrackingSystem.xml,
	CodeXSiteOverview.xml, PatchManager.xml, ProjectAdministration.xml,
	SupportRequestManager.xml, SurveyManager.xml, TaskManager.xml,
	VersionControlWithCVS.xml: Major Release 2.0. Bug Attachment, CC
	List, new notification process, type of search criteria, Custom
	fields documented in the bug tracking system. Merge with exisiting
	on-line CodeX help.

2002-09-19 15:54  ljulliar

	* user_guide/slides/en_US/: File_Release.png, File_Release.sxd:
	Typo fixed and some font changes

2002-09-19 15:53  ljulliar

	* user_guide/xml/en_US/template.xml: 3 dots (...) is &hellip; in
	XML

2002-09-17 18:12  ljulliar

	* user_guide/xml/en_US/: BugTrackingSystem.xml,
	ProjectAdministration.xml, TaskManager.xml: Member Permission
	changed to User Permission to align with PHP scripts terminology.

2002-09-17 17:49  ljulliar

	* user_guide/: screenshots/en_US/sc_bugbrowsing.png,
	screenshots/en_US/sc_bugbrowsing.sxd,
	screenshots/en_US/sc_bugfieldusagesettings.png,
	screenshots/en_US/sc_bugnotificationmatrix.png,
	screenshots/en_US/sc_bugreportbrowsing.png,
	screenshots/en_US/sc_bugreportsetting.png,
	screenshots/en_US/sc_supportbrowsing.png,
	screenshots/en_US/sc_supportbrowsing.sxd,
	xml/en_US/BugTrackingSystem.xml: BUg Tracking Chapter merged with
	former php help script in www/help and chapter layout revised. 3
	screeshots added.

2002-09-17 17:46  ljulliar

	* user_guide/xml/en_US/BecomingACodeXCitizen.xml: minor typo
	correction and re-indentation

2002-09-16 14:28  ljulliar
