@@ -1,3 +1,8 @@
+2002-11-12 10:13  ljulliar
+
+	* xml/en_US/OtherServices.xml : Clarified the section on how to
+	use the Anonymous FTP space. (task #2307)
+
 ------------------------------------------------------------------------------
 CUG 2.0 (tag: CUG_2_0) - 2002-09-19
 
